--- a/RiderGen/templates/channels.html
+++ b/RiderGen/templates/channels.html
@@ -28,87 +28,171 @@
             <div class="form-group">
                 <input autocomplete="off" autofocus class="form-control" name="contactdets" placeholder="Contact details" type="text">
             </div>
-            <div>
-                <button type="button" class="section button1" name="drums">Drums</button>
-                <button type="button" class="options">Options</button>
-                <fieldset style="display:none" disabled>
-                    <input type="checkbox" id="kick_in" name="instrument" value="kick_in" checked/>
-                    <label for="kick_in" class="drum_channels">Kick in</label>
-                    <input type="checkbox" id="kick_out" name="instrument" value="kick_out" checked/>
-                    <label for="kick_out" class="drum_channels">Kick out</label>
-                    <input type="checkbox" id="snare_top" name="instrument" value="snare_top" checked/>
-                    <label for="snare_top" class="drum_channels">Snare top</label>
-                    <input type="checkbox" id="snare_bottom" name="instrument" value="snare_bottom" checked/>
-                    <label for="snare_bottom" class="drum_channels">Snare bottom</label>
-                    <input type="checkbox" id="hihat" name="instrument" value="hihat" checked/>
-                    <label for="hihat" class="drum_channels">Hi hat</label>
-                    <input type="checkbox" id="rack1" name="instrument" value="rack1" checked/>
-                    <label for="rack1" class="drum_channels">Rack 1</label>
-                    <input type="checkbox" id="rack2" name="instrument" value="rack2" checked/>
-                    <label for="rack2" class="drum_channels">Rack 2</label>
-                    <input type="checkbox" id="floor" name="instrument" value="floor" checked/>
-                    <label for="floor" class="drum_channels">Floor tom</label>
-                    <input type="checkbox" id="overhead_sr" name="instrument" value="overhead_sr" checked/>
-                    <label for="overhead_sr" class="drum_channels">SR overhead</label>
-                    <input type="checkbox" id="overhead_sl" name="instrument" value="overhead_sl" checked/>
-                    <label for="overhead_sl" class="drum_channels">SL overhead</label>
-                    <input type="checkbox" id="drumpad_l" name="instrument" value="drumpad_l"/>
-                    <label for="drumpad_l" class="drum_channels">Drum pad left</label>
-                    <input type="checkbox" id="drumpad_r" name="instrument" value="drumpad_r"/>
-                    <label for="drumpad_r" class="drum_channels">Drum pad right</label>
-                    <input type="checkbox" id="drum_tb" name="instrument" value="drum_tb"/>
-                    <label for="drum_tb" class="drum_channels">Drum talkback</label>
-                </fieldset>
+            <div class="sortable">
+                <div>
+                    <button type="button" class="section button1" name="drums">Drums</button>
+                    <button type="button" class="options">Options</button>
+                    <fieldset style="display:none" class="sortable" disabled>
+                        <div class="overlay"></div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="kick_in" name="instrument" value="kick_in" checked/>
+                            <label for="kick_in" class="drum_channels">Kick in</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="kick_out" name="instrument" value="kick_out" checked />
+                            <label for="kick_out" class="drum_channels">Kick out</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="snare_top" name="instrument" value="snare_top" checked />
+                            <label for="snare_top" class="drum_channels">Snare top</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="snare_bottom" name="instrument" value="snare_bottom" checked />
+                            <label for="snare_bottom" class="drum_channels">Snare bottom</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="hihat" name="instrument" value="hihat" checked />
+                            <label for="hihat" class="drum_channels">Hi hat</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="rack1" name="instrument" value="rack1" checked />
+                            <label for="rack1" class="drum_channels">Rack 1</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="rack2" name="instrument" value="rack2" checked />
+                            <label for="rack2" class="drum_channels">Rack 2</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="floor" name="instrument" value="floor" checked />
+                            <label for="floor" class="drum_channels">Floor tom</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="overhead_sr" name="instrument" value="overhead_sr" checked />
+                            <label for="overhead_sr" class="drum_channels">SR overhead</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="overhead_sl" name="instrument" value="overhead_sl" checked />
+                            <label for="overhead_sl" class="drum_channels">SL overhead</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="drumpad_l" name="instrument" value="drumpad_l" />
+                            <label for="drumpad_l" class="drum_channels">Drum pad left</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="drumpad_r" name="instrument" value="drumpad_r" />
+                            <label for="drumpad_r" class="drum_channels">Drum pad right</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="drum_tb" name="instrument" value="drum_tb" />
+                            <label for="drum_tb" class="drum_channels">Drum talkback</label>
+                        </div>
+                    </fieldset>
+                </div>
+                <div>
+                    <button type="button" class="section button2" name="bass">Bass</button>
+                    <button type="button" class="options">Options</button>
+                    <fieldset style="display:none" class="sortable" disabled>
+                        <div class="overlay"></div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="bass_di" name="instrument" value="bass_di" checked />
+                            <label for="bass_di" class="bass_channels">Bass DI</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="bass_mic" name="instrument" value="bass_mic" checked />
+                            <label for="bass_mic" class="bass_channels">Bass mic</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="bass_tb" name="instrument" value="bass_tb" />
+                            <label for="bass_tb" class="bass_channels">Bass talkback</label>
+                        </div>
+                    </fieldset>
+                </div>
+                <div>
+                    <button type="button" class="section button3" name="guitar">Guitar</button>
+                    <button type="button" class="options">Options</button>
+                    <fieldset style="display:none" class="sortable" disabled>
+                        <div class="overlay"></div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sr_guitar" name="instrument" value="sr_guitar" checked />
+                            <label for="sr_guitar" class="guitar_channels">SR Guitar</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="c_guitar" name="instrument" value="c_guitar" checked />
+                            <label for="c_guitar" class="guitar_channels">C Guitar</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sl_guitar" name="instrument" value="sl_guitar" checked />
+                            <label for="sl_guitar" class="guitar_channels">SL guitar</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sr_guitar_tb" name="instrument" value="sr_guitar_tb" />
+                            <label for="sr_guitar_tb" class="guitar_channels">SR Guitar talkback</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sl_guitar_tb" name="instrument" value="sl_guitar_tb" />
+                            <label for="sl_guitar_tb" class="guitar_channels">SL Guitar talkback</label>
+                        </div>
+                    </fieldset>
+                </div>
+                <div>
+                    <button type="button" class="section button4" name="keys">Keys</button>
+                    <button type="button" class="options">Options</button>
+                    <fieldset style="display:none" class="sortable" disabled>
+                        <div class="overlay"></div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="keys_1" name="instrument" value="keys_1" checked />
+                            <label for="keys_1" class="keys_channels">Keys 1</label>
+                            <input type="checkbox" id="keys_1_r" name="instrument" value="keys_1_r" checked />
+                            <label for="keys_1_r" class="st stereo">stereo</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="keys_2" name="instrument" value="keys_2" />
+                            <label for="keys_2" class="keys_channels">Keys 2</label>
+                        </div>
+                    </fieldset>
+                </div>
+                <div>
+                    <button type="button" class="section button5" name="pb">Playback</button>
+                    <button type="button" class="options">Options</button>
+                    <fieldset style="display:none" class="sortable" disabled>
+                        <div class="overlay"></div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="pb_l" name="instrument" value="pb_l" />
+                            <label for="pb_l" class="pb_channels">Playback Left</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="pb_r" name="instrument" value="pb_r" />
+                            <label for="pb_r" class="pb_channels">Playback Right</label>
+                        </div>
+                    </fieldset>
+                </div>
+                <div>
+                    <button type="button" class="section button6" name="vox">Vocals</button>
+                    <button type="button" class="options">Options</button>
+                    <fieldset style="display:none" class="sortable" disabled>
+                        <div class="overlay"></div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sr_vocal" name="instrument" value="sr_vocal" />
+                            <label for="sr_vocal" class="vocal_channels">SR Vocal</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="c_vocal" name="instrument" value="c_vocal" />
+                            <label for="c_vocal" class="vocal_channels">C Vocal</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sl_vocal" name="instrument" value="sl_vocal" />
+                            <label for="sl_vocal" class="vocal_channels">SL Vocal</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sp_vocal" name="instrument" value="sp_vocal" />
+                            <label for="sp_vocal" class="vocal_channels">Spare Vocal</label>
+                        </div>
+                    </fieldset>
+                </div>
             </div>
             <div>
-                <button type="button" class="section button2" name="bass">Bass</button>
-                <button type="button" class="options">Options</button>
-                <fieldset style="display:none" disabled>
-                    <input type="checkbox" id="bass_di" name="instrument" value="bass_di" checked/>
-                    <label for="bass_di" class="bass_channels">Bass DI</label>
-                    <input type="checkbox" id="bass_mic" name="instrument" value="bass_mic" checked/>
-                    <label for="bass_mic" class="bass_channels">Bass mic</label>
-                    <input type="checkbox" id="bass_tb" name="instrument" value="bass_tb" />
-                    <label for="bass_tb" class="bass_channels">Bass talkback</label>
-                </fieldset>
-            </div>
-            <div>
-                <button type="button" class="section button3" name="guitar">Guitar</button>
-                <button type="button" class="options">Options</button>
-                <fieldset style="display:none" disabled>
-                    <input type="checkbox" id="sr_guitar" name="instrument" value="sr_guitar" checked />
-                    <label for="sr_guitar" class="guitar_channels">SR Guitar</label>
-                    <input type="checkbox" id="sl_guitar" name="instrument" value="sl_guitar" checked />
-                    <label for="sl_guitar" class="guitar_channels">SL guitar</label>
-                    <input type="checkbox" id="sr_guitar_tb" name="instrument" value="sr_guitar_tb" />
-                    <label for="sr_guitar_tb" class="guitar_channels">SR Guitar talkback</label>
-                    <input type="checkbox" id="sl_guitar_tb" name="instrument" value="sl_guitar_tb" />
-                    <label for="sl_guitar_tb" class="guitar_channels">SL Guitar talkback</label>
-                </fieldset>
-            </div>
-            <div>
-                <button type="button" class="section button4" name="keys">Keys</button>
-                <button type="button" class="options">Options</button>
-            </div>
-            <div style="display: none">
-                <p>Exactly how many keys do you have?</p>
-            </div>
-            <div>
-                <button type="button" class="section button5" name="pb">Playback</button>
-                <button type="button" class="options">Options</button>
-            </div>
-            <div style="display: none">
-                <p>Exactly how many tracks do you have?</p>
-            </div>
-            <div>
-                <button type="button" class="section button6" name="vox">Vocals</button>
-                <button type="button" class="options">Options</button>
-            </div>
-            <div style="display: none">
-                <p>Exactly how many singists do you have?</p>
-            </div>
-            <div class="center">
-                <button class="btn btn-primary" type="submit" style="margin:10px">Generate!</button>
+                <button class="btn btn-primary" type="submit">Generate!</button>
+                <button class="btn btn-primary float-right" type="reset">Reset</button>
             </div>
         </form>
     </div>
