--- a/RiderGen/static/content/styles.css
+++ b/RiderGen/static/content/styles.css
@@ -65,7 +65,10 @@ ul {
 }
 
 input[type=checkbox] {
-  display: none;
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  z-index: 0;
 }
 
 input[type=checkbox]:checked + label {
@@ -86,7 +89,7 @@ fieldset {
 }
 
 :disabled {
-  opacity: 0.6;
+  opacity: 0.6 !important;
   cursor: not-allowed;
   pointer-events: none;
 }
@@ -250,6 +253,7 @@ fieldset {
   border-color: darkviolet;
   background-color: darkmagenta;
   font-size: 0.8em;
+  opacity: 1;
 }
 
 .stereo {
@@ -259,6 +263,7 @@ fieldset {
   border-color: darkslategrey;
   background-color: darkcyan;
   font-size: 0.8em;
+  opacity: 1;
 }
 
 .options_holder {
