--- a/RiderGen/templates/channels.html
+++ b/RiderGen/templates/channels.html
@@ -102,12 +102,28 @@
                     <fieldset style="display:none" class="sortable" disabled>
                         <div class="overlay"></div>
                         <div class="options_holder">
-                            <input type="checkbox" id="bass_di" name="instrument" value="bass_di" checked />
-                            <label for="bass_di" class="bass_channels">Bass DI</label>
+                            <input type="checkbox" id="sr_bass_di" name="instrument" value="sr_bass_di" checked />
+                            <label for="sr_bass_di" class="bass_channels">Bass DI (SR)</label>
                         </div>
                         <div class="options_holder">
-                            <input type="checkbox" id="bass_mic" name="instrument" value="bass_mic" checked />
-                            <label for="bass_mic" class="bass_channels">Bass mic</label>
+                            <input type="checkbox" id="sr_bass_mic" name="instrument" value="sr_bass_mic" checked />
+                            <label for="sr_bass_mic" class="bass_channels">Bass mic (SR)</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sl_bass_di" name="instrument" value="sl_bass_di"/>
+                            <label for="sl_bass_di" class="bass_channels">Bass DI (SL)</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sl_bass_mic" name="instrument" value="sl_bass_mic"/>
+                            <label for="sl_bass_mic" class="bass_channels">Bass mic (SL)</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sr_sans_amp" name="instrument" value="sr_sans_amp"/>
+                            <label for="sr_sans_amp" class="bass_channels">Bass Sans Amp (DSR)</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="sl_sans_amp" name="instrument" value="sl_sans_amp"/>
+                            <label for="sl_sans_amp" class="bass_channels">Bass Sans Amp (DSL)</label>
                         </div>
                     </fieldset>
                 </div>
@@ -118,15 +134,21 @@
                         <div class="overlay"></div>
                         <div class="options_holder">
                             <input type="checkbox" id="sr_guitar" name="instrument" value="sr_guitar" checked />
-                            <label for="sr_guitar" class="guitar_channels">SR Guitar</label>
+                            <label for="sr_guitar" class="guitar_channels stl">SR Guitar</label>
+                            <input type="checkbox" id="sr_guitar_r" name="instrument" value="sr_guitar_r"/>
+                            <label for="sr_guitar_r" class="stgtr mono">single mic</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="c_guitar" name="instrument" value="c_guitar" />
-                            <label for="c_guitar" class="guitar_channels">C Guitar</label>
+                            <label for="c_guitar" class="guitar_channels stl">C Guitar</label>
+                            <input type="checkbox" id="c_guitar_r" name="instrument" value="c_guitar_r" disabled/>
+                            <label for="c_guitar_r" class="stgtr mono">single mic</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="sl_guitar" name="instrument" value="sl_guitar" checked />
-                            <label for="sl_guitar" class="guitar_channels">SL guitar</label>
+                            <label for="sl_guitar" class="guitar_channels stl">SL guitar</label>
+                            <input type="checkbox" id="sl_guitar_r" name="instrument" value="sl_guitar_r"/>
+                            <label for="sl_guitar_r" class="stgtr mono">single mic</label>
                         </div>
                     </fieldset>
                 </div>
@@ -136,16 +158,28 @@
                     <fieldset style="display:none" class="sortable" disabled>
                         <div class="overlay"></div>
                         <div class="options_holder">
-                            <input type="checkbox" id="keys_1" name="instrument" value="keys_1" checked />
-                            <label for="keys_1" class="keys_channels">Keys 1</label>
-                            <input type="checkbox" id="keys_1_r" name="instrument" value="keys_1_r" checked />
+                            <input type="checkbox" id="keys_1" name="instrument" value="keys_1_l" checked/>
+                            <label for="keys_1" class="keys_channels stl">Keys 1</label>
+                            <input type="checkbox" id="keys_1_r" name="instrument" value="keys_1_r" checked/>
                             <label for="keys_1_r" class="st stereo">stereo</label>
                         </div>
                         <div class="options_holder">
-                            <input type="checkbox" id="keys_2" name="instrument" value="keys_2" />
-                            <label for="keys_2" class="keys_channels">Keys 2</label>
-                            <input type="checkbox" id="keys_2_r" name="instrument" value="keys_2_r" checked />
+                            <input type="checkbox" id="keys_2" name="instrument" value="keys_2_l" />
+                            <label for="keys_2" class="keys_channels stl">Keys 2</label>
+                            <input type="checkbox" id="keys_2_r" name="instrument" value="keys_2_r" checked disabled/>
                             <label for="keys_2_r" class="st stereo">stereo</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="korg" name="instrument" value="korg_l"/>
+                            <label for="korg" class="keys_channels stl">Korg</label>
+                            <input type="checkbox" id="korg_r" name="instrument" value="korg_r" checked disabled/>
+                            <label for="korg_r" class="st stereo">stereo</label>
+                        </div>
+                        <div class="options_holder">
+                            <input type="checkbox" id="moog" name="instrument" value="moog_l" />
+                            <label for="moog" class="keys_channels stl">Moog</label>
+                            <input type="checkbox" id="moog_r" name="instrument" value="moog_r" checked disabled/>
+                            <label for="moog_r" class="st stereo">stereo</label>
                         </div>
                     </fieldset>
                 </div>
@@ -156,13 +190,13 @@
                         <div class="overlay"></div>
                         <div class="options_holder">
                             <input type="checkbox" id="tracks" name="instrument" value="tracks" checked />
-                            <label for="tracks" class="pb_channels">Tracks</label>
+                            <label for="tracks" class="pb_channels stl">Tracks</label>
                             <input type="checkbox" id="tracks_r" name="instrument" value="tracks_r" checked />
                             <label for="tracks_1_r" class="st stereo">stereo</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="pb_bvs" name="instrument" value="pb_bvs" />
-                            <label for="pb_bvs" class="pb_channels">Track BVs</label>
+                            <label for="pb_bvs" class="pb_channels stl">Track BVs</label>
                             <input type="checkbox" id="pb_bvs_r" name="instrument" value="pb_bvs_r" checked />
                             <label for="pb_bvs_r" class="st stereo">stereo</label>
                         </div>
