--- a/RiderGen/static/content/styles.css
+++ b/RiderGen/static/content/styles.css
@@ -88,7 +88,7 @@ fieldset {
   padding: 10px;
 }
 
-:disabled {
+:disabled, .disabled {
   opacity: 0.6 !important;
   cursor: not-allowed;
   pointer-events: none;
