--- a/RiderGen/static/content/styles.scss
+++ b/RiderGen/static/content/styles.scss
@@ -110,7 +110,7 @@ fieldset {
     padding: 10px;
 }
 
-:disabled {
+:disabled, .disabled {
     opacity: 0.6 !important;
     cursor: not-allowed;
     pointer-events: none;
