--- a/RiderGen/templates/channels.html
+++ b/RiderGen/templates/channels.html
@@ -142,7 +142,7 @@
                             <input type="checkbox" id="c_guitar" name="instrument" value="c_guitar" />
                             <label for="c_guitar" class="guitar_channels stl">C Guitar</label>
                             <input type="checkbox" id="c_guitar_r" name="instrument" value="c_guitar_r" disabled/>
-                            <label for="c_guitar_r" class="stgtr mono">single mic</label>
+                            <label for="c_guitar_r" class="stgtr mono disabled">single mic</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="sl_guitar" name="instrument" value="sl_guitar" checked />
@@ -167,19 +167,19 @@
                             <input type="checkbox" id="keys_2" name="instrument" value="keys_2_l" />
                             <label for="keys_2" class="keys_channels stl">Keys 2</label>
                             <input type="checkbox" id="keys_2_r" name="instrument" value="keys_2_r" checked disabled/>
-                            <label for="keys_2_r" class="st stereo">stereo</label>
+                            <label for="keys_2_r" class="st stereo disabled">stereo</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="korg" name="instrument" value="korg_l"/>
                             <label for="korg" class="keys_channels stl">Korg</label>
                             <input type="checkbox" id="korg_r" name="instrument" value="korg_r" checked disabled/>
-                            <label for="korg_r" class="st stereo">stereo</label>
+                            <label for="korg_r" class="st stereo disabled">stereo</label>
                         </div>
                         <div class="options_holder">
                             <input type="checkbox" id="moog" name="instrument" value="moog_l" />
                             <label for="moog" class="keys_channels stl">Moog</label>
                             <input type="checkbox" id="moog_r" name="instrument" value="moog_r" checked disabled/>
-                            <label for="moog_r" class="st stereo">stereo</label>
+                            <label for="moog_r" class="st stereo disabled">stereo</label>
                         </div>
                     </fieldset>
                 </div>
@@ -189,16 +189,16 @@
                     <fieldset style="display:none" class="sortable" disabled>
                         <div class="overlay"></div>
                         <div class="options_holder">
-                            <input type="checkbox" id="tracks" name="instrument" value="tracks" checked />
+                            <input type="checkbox" id="tracks" name="instrument" value="tracks_l" checked />
                             <label for="tracks" class="pb_channels stl">Tracks</label>
                             <input type="checkbox" id="tracks_r" name="instrument" value="tracks_r" checked />
-                            <label for="tracks_1_r" class="st stereo">stereo</label>
+                            <label for="tracks_r" class="st stereo">stereo</label>
                         </div>
                         <div class="options_holder">
-                            <input type="checkbox" id="pb_bvs" name="instrument" value="pb_bvs" />
+                            <input type="checkbox" id="pb_bvs" name="instrument" value="pb_bvs_l"/>
                             <label for="pb_bvs" class="pb_channels stl">Track BVs</label>
-                            <input type="checkbox" id="pb_bvs_r" name="instrument" value="pb_bvs_r" checked />
-                            <label for="pb_bvs_r" class="st stereo">stereo</label>
+                            <input type="checkbox" id="pb_bvs_r" name="instrument" value="pb_bvs_r" checked disabled/>
+                            <label for="pb_bvs_r" class="st stereo disabled">stereo</label>
                         </div>
                     </fieldset>
                 </div>
